Tower Buy with Buying and Map Expansion
We can actually buy a tower now!

Adds Expansion Config for map expansion, and with it code to expand the map on a specified wave.

Adds Pause Menu and Tower Detail Panel scripts.

--- a/.gitignore
+++ b/.gitignore
@@ -77,4 +77,4 @@ crashlytics-build.properties
 # Sprites and Audios - these are distributed independently
 # /[Aa]ssets/[Ss]prites/*
 # /[Aa]ssets/[Aa]udio/*.ogg
-/[Aa]ssets/[Ss]prites/CleanFlatIcon/*
+/[Aa]ssets/[Ss]prites/CleanFlatIcon/**/*.png
