--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
           git reset --hard
       - name: Download Icon
         run: |
-          curl ${{ secrets.ICON_URL }} -o Icon.zip
+          curl -o Icon.zip ${{ secrets.ICON_URL }}
           unzip Icon.zip -d Assets/Sprites
           rm Icon.zip
       # Cache
