Fix curl URL (2)
Fix special characters messing up curl URL

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
           git reset --hard
       - name: Download Icon
         run: |
-          curl -o Icon.zip ${{ secrets.ICON_URL }}
+          curl -o Icon.zip "${{ secrets.ICON_URL }}"
           unzip Icon.zip -d Assets/Sprites
           rm Icon.zip
       # Cache
